--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,27 +1,26 @@
 /* Custom Navbar Styling */
 
 .navbar-custom {
-    /* Spacing for better structure */
-    border-bottom: 1px solid #454d55;
-    /* Subtle border at the bottom */
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    /* Soft shadow for depth */
-    display: flex;
-    margin-left: 0;
-    background-color: #343a40;
-    /* Same background color as the sidebar */
-    padding: 1rem;
-    /* Padding for the navbar */
+    background-color: #f3f5f7;
+    box-shadow: 2px 0 5px #9cb0c4;
+    color: white;
+    padding: 10px;
     position: fixed;
-    /* Fixed position to keep it in place */
     top: 0;
-    /* Align to the top */
-    left: 250px;
-    /* Leave space for the sidebar */
-    width: calc(100% - 250px);
-    /* Full width minus sidebar width */
-    z-index: 1000;
+    left: 0;
+    width: 100%; /* Ensure the navbar stretches across the full width */
+    height: 60px; /* Adjust height as needed */
+    z-index: 1000; /* Keep navbar on top */
+    box-sizing: border-box; /* Ensure padding doesn't affect width */
+    overflow: hidden; /* Prevent any overflow issues */
+    display: flex;
 }
+.main {
+    display: flex;
+    align-items: center;  /* Vertically centers the image within the navbar */
+    justify-content: flex-start; 
+     /* Aligns content to the start */
+  }
 
 .navbar-brand {
     font-size: 1.75rem;
@@ -67,6 +66,26 @@
     background-color: #f8c291;
     /* Custom color for the mobile menu button */
 }
+.image-style img {
+    max-height: 40px; /* Set the height of the image (adjust as necessary) */
+    width: auto; /* Keep the image's aspect ratio intact */
+    display: block; /* Remove any extra space below the image */
+  }
+
+.title{
+    text-decoration: none;
+    margin-right: 20px;
+}
+.toolbar {
+    display: flex;
+    justify-content: space-between; /* Add space between the elements */
+    align-items: center; /* Align items vertically in the center */
+  }
+
+  .navbar-content {
+    display: flex;
+    align-items: center; /* Align items vertically */
+  }
 
 .navbar-toggler-icon {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23ffffff' viewBox='0 0 30 30'%3E%3Cpath stroke='rgba%280, 0, 0, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
@@ -102,6 +121,7 @@
 
 .container-fluid {
     padding: 0 1.5rem;
+    background-color: blue;
     /* Align container padding */
 }
 
