--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,8 +1,8 @@
 <div class="sidebar">
-    <a class="sidebar-brand" href="#">Gruppie connect</a>
+   <div class="sidebar-content">
     <ul class="sidebar-nav">
         <li class="sidebar-item">
-            <a class="sidebar-link" routerLink="/" routerLinkActive="active">dasboard</a>
+            <a class="sidebar-link" routerLink="/" routerLinkActive="active">Dasboard</a>
         </li>
         <li class="sidebar-item">
             <a class="sidebar-link" routerLink="/about" routerLinkActive="active">Daily Activity</a>
@@ -14,4 +14,5 @@
             <a class="sidebar-link" routerLink="/contact" routerLinkActive="active">Accounting</a>
         </li>
     </ul>
+</div>
 </div>
