--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,28 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-custom">
-    <!-- <div class="container-fluid">
-        a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>  -->
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav me-auto">
-            <!-- Add me-auto for automatic margin -->
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" routerLink="/" routerLinkActive="active">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" routerLink="/about" routerLinkActive="active">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" routerLink="/about" routerLinkActive="active">blog</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" routerLink="/about" routerLinkActive="active">blog</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" routerLink="/about" routerLinkActive="active">Contact us</a>
-            </li>
-        </ul>
+    <div class="container-fluid">
+      <div class="main">
+        <div> 
+          <div class="image-style">
+            <img src="assets/images/2.png" alt="Logo image" class="navbar-image">
+          </div>
+        </div>
+      </div>
     </div>
-    <!-- </div> -->
-</nav>
+  </nav>
+  
