--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,13 @@
-<app-sidebar></app-sidebar>
+<div class="app-sidebar">
+    <app-sidebar></app-sidebar>
+</div>
 <app-navbar></app-navbar>
 <div class="content">
     <router-outlet></router-outlet>
+
+    <div class="container-fluid">
+        <div class="second-div">
+            hello
+        </div>
+    </div>
 </div>
