--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -37,11 +37,11 @@
     </div>
     <div class="col-md-4">
       <div class="box">ID card</div>
-    </div>
+    </div> -->
     <!-- <div class="col-md-4">
       <div class="box">Div 6</div>
     </div> -->
-  </div>
+  <!-- </div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
@@ -49,4 +49,4 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 </body>
-</html>
+</html> -->
