--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,5 +1,6 @@
 <div class="sidebar">
    <div class="sidebar-content">
+    <img src="assets/images/2.png" alt="Logo image" class="navbar-image" style="height: 60px; width: auto;">
     <ul class="sidebar-nav">
         <li class="sidebar-item">
             <a class="sidebar-link" routerLink="/" routerLinkActive="active">Dasboard</a>
