--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,19 +1,29 @@
 <div class="sidebar">
-   <div class="sidebar-content">
-    <img src="assets/images/2.png" alt="Logo image" class="navbar-image" style="height: 60px; width: auto;">
-    <ul class="sidebar-nav">
-        <li class="sidebar-item">
-            <a class="sidebar-link" routerLink="/" routerLinkActive="active">Dasboard</a>
-        </li>
-        <li class="sidebar-item">
-            <a class="sidebar-link" routerLink="/about" routerLinkActive="active">Daily Activity</a>
-        </li>
-        <li class="sidebar-item">
-            <a class="sidebar-link" routerLink="/services" routerLinkActive="active">Admin</a>
-        </li>
-        <li class="sidebar-item">
-            <a class="sidebar-link" routerLink="/contact" routerLinkActive="active">Accounting</a>
-        </li>
-    </ul>
-</div>
+    <div class="sidebar-header">
+        <div class="header-content">
+            <div class="heading">
+                <p>Gruppie Connect</p>
+            </div>
+        </div>
+    </div>
+    <div class="sidebar-content">
+
+
+        <img src="assets/images/2.png" alt="Logo image" class="navbar-image">
+        <ul class="sidebar-nav">
+            <li class="sidebar-item">
+                <a class="sidebar-link" routerLink="/" routerLinkActive="active">Dasboard</a>
+            </li>
+            <li class="sidebar-item">
+                <a class="sidebar-link" routerLink="/about" routerLinkActive="active">Daily Activity</a>
+            </li>
+            <li class="sidebar-item">
+                <a class="sidebar-link" routerLink="/services" routerLinkActive="active">Admin</a>
+            </li>
+            <li class="sidebar-item">
+                <a class="sidebar-link" routerLink="/contact" routerLinkActive="active">Accounting</a>
+            </li>
+        </ul>
+    </div>
+
 </div>
