--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,22 +5,21 @@
     overflow: auto;
 }
 
-.app-sidebar{
+.app-sidebar {
     width: 200px;
-    background-color: red !important;
+    background-color: rgb(0, 162, 255) !important;
 }
 
-.container-fluid{
+.container-fluid {
     display: flex;
     justify-content: end;
     align-items: center;
     width: 100%;
     height: 500px;
-    background-color: red;
-    /* margin-top: 10px; */
+    background-color: rgb(25, 186, 226);
 }
 
-.second-div{
+.second-div {
     display: flex;
     justify-content: center;
     align-items: center;
