--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,12 @@
     <app-sidebar></app-sidebar>
 </div>
 <app-navbar></app-navbar>
-<div class="content">
-    <router-outlet></router-outlet>
-
+<!-- <div class="content"> -->
+<router-outlet></router-outlet>
+<!-- 
     <div class="container-fluid">
         <div class="second-div">
             hello
         </div>
-    </div>
-</div>
+    </div> -->
+<!-- </div> -->
