--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,12 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-custom">
-    <div class="container-fluid">
-      <div class="main">
-        <div> 
-          <div class="image-style">
-            <img src="assets/images/2.png" alt="Logo image" class="navbar-image">
-          </div>
+    <!-- <div class="container-fluid">
+        <div class="main">
+            <div>
+
+            </div>
         </div>
-      </div>
-    </div>
-  </nav>
-  
+    </div> -->
+</nav>
