--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="sidebar">
+<!-- <div class="sidebar">
     <div class="sidebar-header">
         <div class="header-content">
             <div class="heading">
@@ -26,4 +26,31 @@
         </ul>
     </div>
 
-</div>
+</div> -->
+
+
+
+
+<div class="container">
+    <div class="top-sidebar">
+        <span class="sidebar-toggle" (click)="toggleSidebar()">&#9776;</span>
+        <span class="website-name" style="font-size: 15px;">Gruppie Connect</span>
+    </div>
+
+    <!-- Sidebar -->
+    <div class="sidebar" [ngClass]="{'sidebar-collapsed': isSidebarCollapsed}">
+        <ul class="sidebar-nav">
+            <li class="sidebar-item">
+                <a class="sidebar-link" routerLink="/" routerLinkActive="active">Dasboard</a>
+            </li>
+            <li class="sidebar-item">
+                <a class="sidebar-link" routerLink="/about" routerLinkActive="active">Daily Activity</a>
+            </li>
+            <li class="sidebar-item">
+                <a class="sidebar-link" routerLink="/services" routerLinkActive="active">Admin</a>
+            </li>
+            <li class="sidebar-item">
+                <a class="sidebar-link" routerLink="/contact" routerLinkActive="active">Accounting</a>
+            </li>
+        </ul>
+    </div>
