--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,3 +1,8 @@
-.container mt-4{
-    margin-top: 20px;
+.container.mt-4 {
+    margin-top: 50px;
+    margin-left: 250px;
+    /* Add a left margin equal to the sidebar's width */
+    width: calc(100% - 250px);
+    /* Space calculation for the content area */
+    z-index: 1030;
 }
