--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -93,6 +93,7 @@
     height: 100%;
     width: 200px;
     background-color: #6199da;
+    /* box-shadow: 2px 0 5px #0a0a0a; */
     color: white;
     display: flex;
     flex-direction: column;
@@ -212,4 +213,11 @@
     font-size: 24px;
     font-weight: bold;
     color: aliceblue;
+}
+
+.sidebar-link {
+    display: block;
+    padding: 15px 20px;
+    color: white;
+    text-decoration: none;
 }
