--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,47 +1,17 @@
-<!-- <div class="sidebar">
-    <div class="sidebar-header">
-        <div class="header-content">
-            <div class="heading">
-                <p>Gruppie Connect</p>
-            </div>
-        </div>
-    </div>
-    <div class="sidebar-content">
-
-
-        <img src="assets/images/2.png" alt="Logo image" class="navbar-image">
-        <ul class="sidebar-nav">
-            <li class="sidebar-item">
-                <a class="sidebar-link" routerLink="/" routerLinkActive="active">Dasboard</a>
-            </li>
-            <li class="sidebar-item">
-                <a class="sidebar-link" routerLink="/about" routerLinkActive="active">Daily Activity</a>
-            </li>
-            <li class="sidebar-item">
-                <a class="sidebar-link" routerLink="/services" routerLinkActive="active">Admin</a>
-            </li>
-            <li class="sidebar-item">
-                <a class="sidebar-link" routerLink="/contact" routerLinkActive="active">Accounting</a>
-            </li>
-        </ul>
-    </div>
-
-</div> -->
-
-
-
-
 <div class="container">
     <div class="top-sidebar">
         <span class="sidebar-toggle" (click)="toggleSidebar()">&#9776;</span>
         <span class="website-name" style="font-size: 15px;">Gruppie Connect</span>
+        <!-- <span class="logo">
+            <img src=".src/assets/images/2.png" alt="not displaying">
+        </span> -->
     </div>
 
     <!-- Sidebar -->
     <div class="sidebar" [ngClass]="{'sidebar-collapsed': isSidebarCollapsed}">
         <ul class="sidebar-nav">
             <li class="sidebar-item">
-                <a class="sidebar-link" routerLink="/" routerLinkActive="active">Dasboard</a>
+                <a class="sidebar-link" routerLink="/home" routerLinkActive="active">Dasboard</a>
             </li>
             <li class="sidebar-item">
                 <a class="sidebar-link" routerLink="/about" routerLinkActive="active">Daily Activity</a>
